# probable-octo-memory

./: .env  .gitignore  docker-compose.yml  heroku.yml
.github/: dependabot.yml
app/model/: item.py  task.py  user.py
app/router/: item.py  task.py  user.py
app/schema/: authentication.py  item.py  task.py  user.py
app/service/: authentication.py  item.py  task.py
backend/: Dockerfile  config.py  settings.toml
backend/app/: __init__.py  pyproject.toml  settings.toml
backend/app/ext/: db.py
backend/app/model/: __init__.py  annotation.py  category.py  priority.py  situation.py  task.py  user.py
backend/app/router/: annotation.py  category.py  priority.py  situation.py  task.py  user.py
backend/app/schema/: annotation.py  category.py  priority.py  situation.py  task.py  user.py
backend/app/service/: annotation.py  authentication.py  category.py  priority.py  situation.py  task.py  user.py
frontend/: Dockerfile  README.md  package.json  quasar.conf.js
frontend/src/: index.template.html
frontend/src/boot/: axios.js
frontend/src/components/: SidebarLink.vue  TaskList.vue
frontend/src/components/task/: AnnotationList.vue  TaskForm.vue
frontend/src/components/user/: LoginForm.vue  RegisterForm.vue
frontend/src/css/: app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/config/: Category.vue  Index.vue  Priority.vue  Situation.vue  User.vue  UserDetail.vue
frontend/src/pages/task/: Edit.vue
frontend/src/pages/user/: Dashboard.vue  Login.vue  Register.vue
frontend/src/router/: routes.js
frontend/src/store/: index.js
(+19 files in other folders)
